[gd_scene load_steps=3 format=3 uid="uid://bupucwr8r7boy"]

[ext_resource type="Script" uid="uid://dj2y5qtijq2qq" path="res://data/scenes/menu/multiplayer_lobby.gd" id="1"]
[ext_resource type="Theme" uid="uid://cw1tvfu07bpq0" path="res://data/resources/themes/default.tres" id="2"]

[node name="MultiplayerLobby" type="Control" groups=["menu"]]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -152.0
offset_right = 125.0
offset_bottom = 152.0
theme_override_constants/separation = 20

[node name="ServerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaitingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Waiting for playersâ€¦"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCount" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "%d players"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 5
text = "Start Game"

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 5
text = "Back"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
